--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joystick-component": "^6.2.1",
     "react-konva": "^18.2.10",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
